--- a/output/templates/bsmain_mainmenu_horiz.htm
+++ b/output/templates/bsmain_mainmenu_horiz.htm
@@ -36,5 +36,11 @@
 
 	</li>
 	{END item6_menulink}
+	{BEGIN item7_menulink}
+	<li class="  {$item7_current}">
+	<a {$item7_menulink_attrs}>{$item7_title}</a>
+
+	</li>
+	{END item7_menulink}
 </ul>
 
