--- a/output/templates/bswelcome_page_mainmenu.htm
+++ b/output/templates/bswelcome_page_mainmenu.htm
@@ -97,6 +97,20 @@
 	</div>
 	
 	
+			<div class="col-lg-3 col-md-4 col-sm-6">
+		<div class="bs-welcome-item">
+			<div class="bs-welcome-header" {$item8_menulink_style}> 
+				<a {$item8_menulink_attrs}>{$item8_icon}{$item8_title}</a>
+			</div>
+			{BEGIN item8_comments}
+			<div class="bs-welcome-content">
+				{$item8_comments_text}
+			</div>
+			{END item8_comments}
+		</div>
+	</div>
+	
+	
 </div>
 
 
