--- a/output/templates/events_print.htm
+++ b/output/templates/events_print.htm
@@ -169,6 +169,20 @@
 			{END endrecord_block}
 		{END grid_record}
 		</tr>
+	{BEGIN details_row}
+		<tr class="{$rowclass}" {$rowattrs} {$rowstyle}>
+			{BEGIN details_record}
+				<td colspan="6">
+					{BEGIN details_table}
+						{$details}
+					{END details_table}
+				</td>
+				{BEGIN endrecord_block}
+				<td class="rnr-cs" {$endrecordblock_attrs}>&nbsp;</td>
+				{END endrecord_block}
+			{END details_record}
+		</tr>
+	{END details_row}
 {END grid_row}
 	</tbody>
 
