--- a/output/templates/main_mainmenu.htm
+++ b/output/templates/main_mainmenu.htm
@@ -72,6 +72,18 @@
 
 	</li>
 	{END item6_menulink}
+	{BEGIN item7_menulink}
+	<li class="{$item7_current} menuLeaf">
+		<div>
+<div>
+<a {$item7_menulink_attrs}>{$item7_title}</a>
+</div>
+</div>
+
+
+
+	</li>
+	{END item7_menulink}
 </ul>
 {END mainmenu_block}
 
