--- a/output/templates/main_mainmenu_horiz.htm
+++ b/output/templates/main_mainmenu_horiz.htm
@@ -52,5 +52,14 @@
 
 	</div>
 	{END item6_menulink}
+	{BEGIN item7_menulink}
+	<div id="item7" class="rnr-b-hmenu {$menustyle} Leaf {$item7_current}">
+	<span class="rnr-hseparator"></span><div>
+<a {$item7_menulink_attrs}>{$item7_title}</a></div>
+
+
+
+	</div>
+	{END item7_menulink}
 
 
