--- a/output/templates/main_mainmenu_quickjump.htm
+++ b/output/templates/main_mainmenu_quickjump.htm
@@ -28,3 +28,8 @@
 		{$item6_nbsps}{$item6_title}
 	</option>
 	{END item6_menulink}
+	{BEGIN item7_menulink}
+	<option {$item7_optionattrs} {BEGIN item7_current}selected{END item7_current}>
+		{$item7_nbsps}{$item7_title}
+	</option>
+	{END item7_menulink}
