--- a/output/templates/oldmain_mainmenu_horiz.htm
+++ b/output/templates/oldmain_mainmenu_horiz.htm
@@ -86,6 +86,20 @@
 
 	</td>
 	{END item6_menulink}
+	{BEGIN item7_menulink}
+	<td id="item7" view="topitem" class="Leaf">
+	<table cellpadding="0">
+	<tr class="runner-menutab{BEGIN item7_current} current{END item7_current}">
+		<td class="runner-cl"><img src="images/spacer.gif"></td>
+		<td class="runner-cc">	
+			<a {$item7_menulink_attrs} {BEGIN item7_current}class="curlink"{END item7_current}>{$item7_title}</a>
+		</td>
+		<td class="runner-cr"><img src="images/spacer.gif"></td>
+	</tr>
+</table>	
+
+	</td>
+	{END item7_menulink}
 	{BEGIN adminarea_link}
 	<td id="itemAA" view="topitem" class="Leaf">
 	<table class="runner-c" cellpadding="0">
