--- a/output/templates/main_mainmenu_m.htm
+++ b/output/templates/main_mainmenu_m.htm
@@ -58,6 +58,14 @@
 
 	</li>	
 	{END item6_menulink}
+	{BEGIN item7_menulink}
+	<li id="item7" class="{$item7_groupclass} {$item7_current} menuLeaf" level=1>
+			<div>
+<a {$item7_menulink_attrs} class="{$item7_current}">{$item7_title}</a>
+</div>
+
+	</li>	
+	{END item7_menulink}
 </ul>
 {END mainmenu_block}
 
