--- a/output/templates/oldmain_mainmenu.htm
+++ b/output/templates/oldmain_mainmenu.htm
@@ -102,6 +102,21 @@
 		<td class="runner-cr"></td>
 	</tr>	
 	{END item6_menulink}
+	{BEGIN item7_menulink}
+	<tr id="item7" view="topitem" class="runner-b-vmenu runner-vmenu tree Leaf{BEGIN item7_current} current{END item7_current}">
+		<td class="runner-cl"></td>	
+		<td class="runner-cc">
+			{BEGIN item7_groupimage}
+<span><img alt="*" src="images/plus.gif" class="groupImg"></span>
+{END item7_groupimage}
+<a {$item7_menulink_attrs} {BEGIN item7_current}class="curlink"{END item7_current}>{$item7_title}</a>
+
+
+
+		</td>
+		<td class="runner-cr"></td>
+	</tr>	
+	{END item7_menulink}
 	{BEGIN adminarea_link}
 	<tr id="itemAAS" view="topitem" class="runner-b-vmenu runner-vmenu simple Separator">
 	<td class="runner-cl"></td>	
@@ -192,6 +207,18 @@
 		<td class="runner-cr"></td>
 	</tr>
 	{END item6_menulink}
+	{BEGIN item7_menulink}
+	<tr class="runner-b-vmenu runner-vmenu simple Leaf{BEGIN item7_current} current{END item7_current}">
+		<td class="runner-cl"></td>	
+		<td class="runner-cc">
+			<a {$item7_menulink_attrs} {BEGIN item7_current}class="curlink"{END item7_current}>{$item7_title}</a>
+
+
+
+		</td>
+		<td class="runner-cr"></td>
+	</tr>
+	{END item7_menulink}
 	{BEGIN adminarea_link}
 	<tr id="itemAAS" view="topitem" class="runner-b-vmenu runner-vmenu simple Separator">
 	<td class="runner-cl"></td>	
